--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "rollup-plugin-url": "^3.0.1",
+    "tailwindcss": "^3.4.17",
     "vite": "^4.4.5"
   }
 }
